# ima-rtmr-extend

./: .clang-format  .editorconfig  .gitignore  .hadolint.yaml  Makefile  README.md  SECURITY.md  flake.nix  pyproject.toml  treefmt.nix  validate.py  validate.sh
.github/workflows/: ci.yml
docs/: build-options.md  ima-policy.md  known-issues.md  mechanism.md
ima-policy-log/: Kbuild  Makefile  handler.c  handler.h  main.c  measure.c  measure.h  utils.c  utils.h
kernel/: README.md  apply-patch.sh  remove-patch.sh
kernel/patches/6.17/: kconfig.patch
kernel/patches/7.0/: kconfig.patch  makefile.patch
nix/: README.md  kernel-patch.nix  module.nix
src/: Kbuild  consts.h  detect.c  detect.h  extend.c  extend.h  handler.c  handler.h  ima.h  ksym.c  ksym.h  log.c  log.h  main.c  seq.c  seq.h  sysfs.c  sysfs.h  utils.c  utils.h
ubuntu/: .gitignore  README.md
ubuntu/common/: build-kernel.sh  docker-build.sh  enable-ima-rtmr.sh  generate-mok.sh  pin-dkms-versions.sh  rename-kernel.sh  sign-kernel.sh
ubuntu/noble/: Dockerfile  README.md
ubuntu/questing/: Dockerfile  build.sh
ubuntu/resolute/: Dockerfile
